# RayTracer

./: .gitignore  CMakeLists.txt  README.md  add_camera_animation.py  convert_exr.py  generate_camera_path.py
RayTracer/: BBoxConfig.h  BVHConfig.h  BumpMapping.h  CMakeLists.txt  CameraAdapter.h  Denoiser.cpp  Denoiser.h  FBXLoader.cpp  FBXLoader.h  IntersectNodeAdapter.h  Main.cpp  PhotonMapBuilder.cpp  PhotonMapBuilder.h  PhotonMappingConfig.h  RayCaster.cpp  RayCaster.h  RenderImageAdapter.h  SceneAdapter.h  ShadeInfoAdapter.h  Shading.cpp  Shading.h  ShadingConfig.h  Shading_Legacy.cpp  miniz_export.h  objects.cpp  scene_box.cpp  triobj_bvh.cpp
assets/: cerealBar.xml
